# Palia-FENTRY

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md
Libraries/RendererHook/: OverlayBase.cpp  OverlayBase.h  RendererDetector.cpp
Libraries/RendererHook/io/: IOManager.cpp  IOManager.h
OHook/: dllmain.cpp  readme.md  signatures.h
OHook/Core/: ConfigManager.cpp  ConfigManager.h  Configuration.cpp  Configuration.h  DetourManager.cpp  DetourManager.h  HotkeysManager.cpp  LocalizationManager.cpp  LogMacros.h  Logger.cpp  Logger.h  Main.cpp
OHook/Detours/Main/: AimDetours.cpp  AimDetours.h  FishingDetours.cpp  FishingDetours.h  HUDDetours.cpp  HUDDetours.h  MovementDetours.cpp  MovementDetours.h  PlayerTweaksDetours.cpp  PlayerTweaksDetours.h  TeleportDetours.cpp  TeleportDetours.h  VillagerDetours.cpp  VillagerDetours.h  WidgetDetours.cpp
OHook/Handlers/: ActorHandler.cpp  ActorHandler.h  ToolHandler.cpp  WidgetHandler.cpp  WidgetHandler.h
OHook/Misc/: ImGuiExt.cpp  ImGuiExt.h  ImGuiNotify.hpp  SDKExt.h  Utils.h
OHook/Overlay/: ESP.cpp  ESP.h  PaliaOverlay.cpp  PaliaOverlay.h
OHook/Overlay/Modules/: Aimbots_FunSettings.h  ESP_AnimalSettings.h  ESP_BugSettings.h  ESP_ForageableSettings.h  ESP_OreSettings.h  ESP_SingleSettings.h  ESP_TreeSettings.h  ESP_VisualSettings.h  Mods_SettingsGlobal.h  Movement_TeleportSettings.h  Selling_PlayerSettings.h  Skills_ToolsSettings.h  Store_AutoSellSettings.h  Tools_CatchingSettings.h  Tools_HuntingSettings.h  Tools_SwingSettings.h
config/: offsets.json
console/: console.cpp  console.hpp
languages/: en.h  es.h  pt.h  zh.h
